2001-01-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSHost.m: New method ([-_addName:]) to add a name to a host.
	Use it to add the local hostname to the 127.0.0.1 host if there is
	no IP address set up for the local machine.

2001-01-17  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/GSXML.m|.h ([GSXMLDocument -stringValue]): dump document in a
 	string.

Wed Jan 17 16:46:09 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* GNUmakefile: Added PACKAGE_NEEDS_CONFIGURE and
	RPM_DISABLE_RELOCATABLE.
	* GNUmakefile: Simplified name to gnustep-base.
	* gnustep-base.spec.in: New file.
	* gnustep-base-debug.spec.in: Idem.
	* gnustep-base.spec: Move to gnustep-base.spec.old.

2001-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMime.m: ([-decodeData:fromrange:intoData:withContext:])
	Added destination data cpacity information to context so that
	correct positioning can be maintained over a sequence of calls
	using a chunked http context.
	* Source/GSAttributedString.m: Fixed bug initialising from an
	empty attributed string, and fixed bug replacing characters in
	range, when an attribute range location is the same s the location
	of the replaced characters.
 
2001-01-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSXML.m: ([-GSXMLDocument setRoot:]) set root node to be
	owned by libxml, so we don't free it's memory ourselves.
	* Headers/gnustep/base/NSValue.h: Added range methods.
	* Source/GNUmakefile: Rename value files to GS prefix and remove
	concrete value header.
	* Source/Makefile.postamble: Build GS value files. rather than NS
	* Source/NSValue.m: Added range methods and updated for change to
	naming conventions.  Added abstract placeholder class.  Fixed encoding
	to store the abstract class in the archive.
	* Testing/values.m: Added range check
	* Source/GSTemplateValue.m: Renamed for consistency.
	Adapted encoding/decoding for storing abstract class in archive.
	* Source/GSValue.m: ditto