@@ -3,6 +3,9 @@
 	* Source/NSHost.m: New method ([-_addName:]) to add a name to a host.
 	Use it to add the local hostname to the 127.0.0.1 host if there is
 	no IP address set up for the local machine.
+	* Source/NSRunLoop.m: ([-acceptInputForMode:beforeDate:]) improve
+	handling of available descriptors - each descriptor may be available
+	for more than one type of event.
 
 2001-01-17  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
